# aros-sie

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  types.rs
src/critic/: engine.rs  mod.rs  output.rs  rules.rs
src/identity/: distance.rs  guard.rs  mod.rs  permissions.rs
src/perceive/: engine.rs  mod.rs
src/persistence/: events.rs  mod.rs  store.rs
src/policy/: archive.rs  diff.rs  mod.rs  skill_library.rs  snapshot.rs
src/self_model/: calibration.rs  mod.rs  registry.rs  snapshot.rs
src/shadow/: dataset.rs  evaluation.rs  mod.rs  pipeline.rs
src/telemetry/: mod.rs  spans.rs
tests/: loop0_lifecycle.rs
